Fixed font size on mobile

--- a/style.css
+++ b/style.css
@@ -61,10 +61,10 @@ i.fa, #resume{
     max-width: 90%;
   }
   h1{
-    font-size: 2em;
+    font-size: 1.5em;
   }
   h2{
-    font-size: 1.2em;
+    font-size: 1em;
   }
   i.fa{
     font-size: 2.5em;
